attempt net5 addition to existing netcoreapp3.1
The build does fail on my system which has just .NET 5 SDK
(5.0.101). The brief errors is as follows. It is strange
that the build is not looking for System.Private.CoreLib.dll
under
"C:\Program Files\dotnet\shared\Microsoft.NETCore.App\5.0.1\System.Private.CoreLib.dll"
which exists.

```
dotnet build -f net5.0 -v detailed .\Microsoft.FrozenObjects.sln
```

```
Dependency "System.Private.CoreLib, Version=5.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e".
	Could not resolve this reference. Could not locate the assembly "System.Private.CoreLib, Version=5.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e". Check to make sure the assembly exists on disk. If this reference is required by your code, you may get compilation errors.
	     For SearchPath "D:\other\FrozenObjects\src\obj\Debug\net5.0".
	     Considered "D:\other\FrozenObjects\src\obj\Debug\net5.0\System.Private.CoreLib.winmd", but it didn't exist.
	     Considered "D:\other\FrozenObjects\src\obj\Debug\net5.0\System.Private.CoreLib.dll", but it didn't exist.
	     Considered "D:\other\FrozenObjects\src\obj\Debug\net5.0\System.Private.CoreLib.exe", but it didn't exist.
	 Required by "Microsoft.FrozenObjects.InternalCalls".
```

1. dotPeek tells me that the PublicKeyToken used within
   System.Private.CoreLib is same within netcoreapp3.1 and
   net5.0.

```
Assembly System.Private.CoreLib, Version=5.0.0.0, Culture=neutral,
PublicKeyToken=7cec85d7bea7798e

Assembly System.Private.CoreLib, Version=4.0.0.0, Culture=neutral,
PublicKeyToken=7cec85d7bea7798e
```

2. I have tried to follow [1] while targetting multiple frameworks,
   but could be missing something (considering build fails).

3. As per [2] the preprocessor for net5 is NET5_0.

[1]
https://docs.microsoft.com/en-us/nuget/create-packages/supporting-multiple-target-frameworks
[2]
https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/preprocessor-directives/preprocessor-if#remarks

--- a/src/Microsoft.FrozenObjects.csproj
+++ b/src/Microsoft.FrozenObjects.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>Embedded</DebugType>
     <EmbedAllSources>true</EmbedAllSources>
@@ -15,7 +15,10 @@
   </ItemGroup>
 
   <Target Name="InvokeBuildTools" BeforeTargets="ResolveAssemblyReferences" Condition="!Exists('$(InternalCallsOutputPath)')">
-    <Exec WorkingDirectory="$(MSBuildThisFileDirectory)../tools" Command="dotnet run $(InternalCallsOutputPath)" />
+    <!-- TargetFramework is automatically set when you call "dotnet build -f ..."
+         to build the overall project.
+      -->
+    <Exec WorkingDirectory="$(MSBuildThisFileDirectory)../tools" Command="dotnet run -f $(TargetFramework) -v normal $(InternalCallsOutputPath)" />
   </Target>
 
 </Project>
